Fixed padding.
0px paddding was causing the 'li' elements to get misaligned.

--- a/MarkdownPreviewer/app/style.scss
+++ b/MarkdownPreviewer/app/style.scss
@@ -5,7 +5,6 @@ $components-width: 550px;
 
 * {
   margin: 0px;
-  padding: 0px;
 }
 
 .container {
